feat: add h2 variables to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 spring.application.name=todoapi
 server.port=8080
+
+#Database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=1234
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+#Cria o ddl pelo hibernate
+spring.jpa.hibernate.ddl-auto=create
