--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.username=user
 spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+#API Password
+api.security.token.secret-key=1JNuFSXHUCWjrVa15aDV2Nq6i9jVIX5RCb0Cn8U+NqI=
+api.security.token.expiration.minutes=120
 
 #Cria o ddl pelo hibernate
 spring.jpa.hibernate.ddl-auto=create
